# transfer-oldstuff

client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: .env.sample  Cargo.toml
server/migrations/20170426011626_initial/: down.sql  up.sql
server/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  service.rs
server/static/css/: base.css
server/static/js/: download.js  upload.js
server/templates/core/: access.html  base.html  home.html
