[package]
name = "server"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[[bin]]
name = "server-bin"

[dependencies]
clap = "2.23"
dotenv = "0.8"
error-chain = "0.10"
lazy_static = "0.2"

rand = "0.3"
chrono = { version = "0.3", features = ["serde"] }

tera = "0.8"

serde = "1"
serde_derive = "1"
serde_json = "1"

diesel = {version = "0.12", features = ["postgres", "chrono"] }
diesel_codegen = {version = "0.12", features = ["postgres"] }

r2d2 = "0.7"
r2d2-diesel = "0.12"

mime = "0.2.3"
params = "0.6"

env_logger = "*"
iron = "*"
router = "*"
logger = "*"
persistent = "*"
staticfile = "*"
mount = "*"
